force-app/main/default/objects/QueryMoreZuora__c/QueryMoreZuora__c.object-meta.xml
<CustomObject>
    <label>QueryMoreZuora</label>
    <nameField>
        <displayFormat>QMZ-{00000}</displayFormat>
        <label>QueryMoreZuora</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QueryMoreZuora</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>