force-app/main/default/objects/QueryMoreZuora__c/fields/BoolParam__c.field-meta.xml
<CustomField>
    <fullName>BoolParam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Parameter</label>
    <type>Checkbox</type>
</CustomField>