force-app/main/default/objects/QueryMoreZuora__c/fields/IntParam__c.field-meta.xml
<CustomField>
    <fullName>IntParam__c</fullName>
    <label>IntParam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>