force-app/main/default/objects/QueryMoreZuora__c/fields/queryLocator__c.field-meta.xml
<CustomField>
    <fullName>queryLocator__c</fullName>
    <label>queryLocator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>